--- a/pom.xml
+++ b/pom.xml
@@ -97,9 +97,9 @@
 			<version>1.6</version>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.guice</groupId>
+			<groupId>com.google.inject</groupId>
 			<artifactId>guice</artifactId>
-			<version>1.0</version>
+			<version>2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>hsqldb</groupId>
