--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,6 @@
 	<packaging>jar</packaging>
 	<name>sql-runner</name>
 	<version>1.0.0.0-SNAPSHOT</version>
-	<parent>
-		<groupId>org.fabricio.parent</groupId>
-		<artifactId>parent-pom</artifactId>
-		<version>1.0</version>
-	</parent>
 	<scm>
 		<connection>scm:svn:http://elendir.dyndns.org/usvn/svn/utilities/</connection>
 		<developerConnection>scm:svn:http://elendir.dyndns.org/usvn/svn/utilities/trunk/SQLRunner/</developerConnection>
@@ -37,14 +32,14 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>commons-dbutils</groupId>
-			<artifactId>commons-dbutils</artifactId>
-			<version>1.1</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${org.springframework.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>commons-dbcp</groupId>
-			<artifactId>commons-dbcp</artifactId>
-			<version>1.2</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${org.springframework.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -57,51 +52,15 @@
 			</dependency
 		-->
 		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.4</version>
-		</dependency>
-		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.4</version>
 		</dependency>
-		<!-- 
 		<dependency>
-			<groupId>org.excel4j</groupId>
-			<artifactId>excel4j</artifactId>
-			<version>1.0</version>
-		</dependency>  -->
-		<dependency>
-			<groupId>org.apache.velocity</groupId>
-			<artifactId>velocity</artifactId>
-			<version>1.6.1</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-collections</groupId>
-			<artifactId>commons-collections</artifactId>
-			<version>3.2.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.freemarker</groupId>
-			<artifactId>freemarker</artifactId>
-			<version>2.3.15</version>
-		</dependency>
-		<dependency>
-			<groupId>org.utils</groupId>
-			<artifactId>utils</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-configuration</groupId>
-			<artifactId>commons-configuration</artifactId>
-			<version>1.6</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.inject</groupId>
-			<artifactId>guice</artifactId>
-			<version>2.0</version>
-		</dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.4</version>
+		</dependency>		
 		<dependency>
 			<groupId>hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
@@ -112,5 +71,28 @@
 			<artifactId>google-collections</artifactId>
 			<version>0.9</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.8.2</version>
+		</dependency>
 	</dependencies>
+
+	<repositories>
+		<repository>
+			<id>com.springsource.repository.bundles.external</id>
+			<name>EBR External Release Repository</name>
+			<url>http:// repository.springsource.com/maven/bundles/external</url>
+		</repository>
+	</repositories>
+
+	<!-- Shared version number properties -->
+	<properties>
+		<org.springframework.version>3.0.0.RELEASE</org.springframework.version>
+	</properties>
 </project>
